--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ textarea {
     resize: none;
     overflow: hidden;
     word-wrap: break-word;
+    border-radius: 10px;
 }
 
 tr:nth-child(even) {
@@ -94,4 +95,27 @@ tr:nth-child(even) {
 
 tr:hover {
     background-color: #fb070730;
+}
+
+
+#typing-heading {
+    text-align: center;
+    color: #000;
+    font-size: 26px;
+    font-weight: bold;
+    text-decoration: underline;
+    min-height: 40px;
+}
+
+.cursor {
+    display: inline-block;
+    font-weight: bold;
+    animation: blink 0.7s infinite;
+    color: #000;
+}
+
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
 }
